--- a/roles/osx-developer/tasks/main.yml
+++ b/roles/osx-developer/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: dash
   homebrew: name=dash state=latest
 
+- name: tmux
+  homebrew: name=tmux state=latest
+
 # pip install awscli
 # git
 # mercurial
