add tmux configuration

--- a/roles/osx-developer/tasks/main.yml
+++ b/roles/osx-developer/tasks/main.yml
@@ -17,6 +17,11 @@
 - name: tmux
   homebrew: name=tmux state=latest
 
+- name: reattach-to-user-namespace
+  homebrew: name=reattach-to-user-namespace state=latest
+
+- name: tmux-config
+  copy: dest=~/.tmux.conf src=tmux.conf 
 # pip install awscli
 # git
 # mercurial
