make tmux experience more Vim like and not OS
* bind keys in tmux to make the experience more Vim like.
* move developer.yml to osx-development.yml to better describe its
  intended use.
* move the OS-agnostic tmux.conf into the developer role.

--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -28,3 +28,6 @@
 
 - name: git config push.default
   command: git config --global push.default simple
+
+- name: tmux-config
+  copy: dest=~/.tmux.conf src=tmux.conf backup=yes
