--- a/roles/osx-developer/tasks/main.yml
+++ b/roles/osx-developer/tasks/main.yml
@@ -23,6 +23,8 @@
 - name: tmux-osx.conf
   copy: dest=~/.tmux-osx.conf src=tmux-osx.conf backup=yes
 
+- name: python site-packages
+  copy: dest=~/Library/Python/2.7/lib/python/site-packages/homebrew.pth src=homebrew.pth
 # pip install awscli
 # git
 # mercurial
