navigate panes using Vi movement keys
Bind keys to navigate panes using Vi movement keys. There are few
different approaches to take for moving among windows and panes
similarly to how one moves among windows in Vim, as shown in the option
sections that are added to tmux.conf. The active option is a decent
compromise and is likely the preferred approach, as it keeps stays most
faithful to the default tmux bindings.

--- a/roles/developer/files/tmux.conf
+++ b/roles/developer/files/tmux.conf
@@ -29,3 +29,53 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'C-v' rectangle-toggle
 bind-key -t vi-copy 'V' rectangle-toggle
 bind-key -t vi-copy 'y' copy-selection
+# bind p paste-buffer
+
+# navigating panes and windows:
+# move among panes using Vim movement keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+unbind l # the default binds l to last-window
+bind l select-pane -R
+
+# navigating panes and  windows, option 1:
+# Bind window navigation similarly to pane navigation, but prefixed with Ctrl.
+# Tmux windows don't really have an anolog to Vim windows; Vim windows are more
+# similar to Tmux panes.
+bind -r C-h select-window -t :- # select-window -t :- is also spelled previous-window
+bind -r C-l select-window -t :+ # select-window -t :+ is also spelled next-window
+
+# navigate windows, option 2:
+# Since Tmux and Vim windows share the same name, bind window navigation
+# similarly to Vim window navigation.
+## bind window navigation similarly to Vim Ctrl-W
+#unbind p # the default binds p to previous-window
+#bind p last-window # Ctrl-W p in Vim selects the last accessed window
+#bind W previous-window # previous-window is also spelled select-window -t :-
+#unbind n # the default binds n to next-window
+#bind n new-window # Ctrl-W n in Vim creates a new window
+#unbind w # the default binds w to choose-window
+#bind w next-window # next-window is also spelled select-window -t :+
+#unbind c # the default binds c to new-window
+#bind c choose-window
+
+# navigating panes and windows, alternative 3: 
+# tmux panes are most similar to Vim windows. Bind keys accordingly:
+## bind pane navigation similarly to Vim Ctrl-W
+#unbind w # the default binds w to choose-window
+#unbind p
+#bind -r w select-pane -R # Ctrl-W w in Vim selects the next window
+#bind -r p last-pane # Ctrl-W p in Vim selects the last accessed window
+#bind -r W last-pane # Ctrl-W W in Vim selects the last accessed window
+
+##############
+# Consider additional key bindings: 
+# # act like GNU screen
+# unbind C-b
+# set -g prefix C-a
+#
+# setw -g mouse-select-window on
+#
+# # after copying to a tmux buffer, hit y again to copy to clipboard
+# bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
