--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -49,6 +49,9 @@
 - name: git doglog alias
   command: git config --global alias.doglog 'log --decorate --oneline --graph'
 
+- name: git config serve alias
+  command: git config --global alias.serve 'daemon --reuseaddr --verbose --base-path=. --export-all ./.git'
+
 - name: git config core.excludesfile
   command: git config --global core.excludesfile "~/.gitignore"
 
