tmux: bind y to copy buffer to clipboard

--- a/roles/developer/files/tmux-osx.conf
+++ b/roles/developer/files/tmux-osx.conf
@@ -3,3 +3,5 @@
 #		unbind -t vi-copy Enter
 #		bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+bind y run-shell "tmux show-buffer | pbcopy" \; display-message "copied tmux buffer to the pasteboard"
