fix conf to work with tmux 2.1

--- a/roles/developer/files/tmux.conf
+++ b/roles/developer/files/tmux.conf
@@ -4,8 +4,9 @@ set -g bell-action current
 set -g visual-bell on
 
 # a mouse
-set -g mode-mouse on
-setw -g mouse-select-pane on
+#set -g mode-mouse on
+#setw -g mouse-select-pane on
+set -g mouse on
 
 # Use vim keybindings in copy mode
 set-window-option -g mode-keys vi
