bind y to copy buffer to clipboard correctly
Read the tmux-osx.conf after everything the defaults setup in tmux.conf
are complete so that key bindings configured in tmux-osx.conf are the
overrides instead of the overridden.

--- a/roles/developer/files/tmux-osx.conf
+++ b/roles/developer/files/tmux-osx.conf
@@ -4,4 +4,4 @@
 #		bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
-bind y run-shell "tmux show-buffer | pbcopy" \; display-message "copied tmux buffer to the pasteboard"
+bind-key -t vi-copy 'y' copy-pipe pbcopy
