--- a/roles/developer/files/tmux.conf
+++ b/roles/developer/files/tmux.conf
@@ -1,6 +1,10 @@
 set -g bell-action current
 set -g visual-bell on
 
+set -g default-terminal "screen-256color"
+set -g terminal-overrides "screen-256color;Tc"
+set -g terminal-overrides "xterm-256color;Tc"
+
 # a mouse
 #set -g mode-mouse on
 #setw -g mouse-select-pane on
