--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -44,29 +44,31 @@
   tags:
     - packages
 
-- name: tmux-config
-  copy: dest=~/.tmux.conf src=tmux.conf backup=yes
+- name: create tmux config directory
+  file: dest="{{ ansible_env.HOME }}/.config/tmux" state=directory
 
-- name: tmux-osx.conf
-  copy: dest=~/.tmux-osx.conf src=tmux-osx.conf backup=yes
-  when: ansible_distribution == 'MacOSX'
+- name: tmux.conf
+  copy: dest="{{ ansible_env.HOME }}/.tmux.conf" src=tmux.conf backup=yes
+
+- name: tmux config files
+  copy: dest="{{ ansible_env.HOME }}/.config/tmux" src=tmux/ backup=yes
 
 - name: bashrc
-  copy: dest=~/.bashrc src=bashrc backup=yes
+  copy: dest="{{ ansible_env.HOME }}/.bashrc" src=bashrc backup=yes
 
 - name: bashrc-osx
-  copy: dest=~/.bashrc-osx src=bashrc-osx backup=yes
+  copy: dest="{{ ansible_env.HOME }}/.bashrc-osx" src=bashrc-osx backup=yes
   when: ansible_distribution == 'MacOSX'
 
 - name: bash_profile
-  copy: dest=~/.bash_profile src=bash_profile backup=yes
+  copy: dest="{{ ansible_env.HOME }}/.bash_profile" src=bash_profile backup=yes
 
 # https://docs.python.org/2/library/site.html
 - name: python site-packages directory
   file: dest="{{ ansible_env.HOME }}/Library/Python/2.7/lib/python/site-packages" state=directory
 
 - name: python site-packages configuration
-  copy: dest=~/Library/Python/2.7/lib/python/site-packages/homebrew.pth src=homebrew.pth
+  copy: dest="{{ ansible_env.HOME }}/Library/Python/2.7/lib/python/site-packages/homebrew.pth" src=homebrew.pth
   when: ansible_distribution == 'MacOSX'
 
 - name: create global git config directory
