add gpg configuration
* Install gpg2, gpg-agent, and pinentry-mac.
* Provision ~/.gnupg/gpg.conf and ~/.gnupg/gpg-agent.conf.
* Configure git to use gpg2.
* Start gpg-agent (with ssh-support) in ~/.bashrc.
* Remove boot2docker.

--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -74,3 +74,5 @@
 - name: git config version.prereleaseSuffix -rc
   command: git config --global version.prereleaseSuffix -rc
 
+- name: git config gpg.program gpg2
+  command: git config --global gpg.program gpg2
