update tmux config
copying to the OSX clipboard broke again in Sierra. Changing the
copy-pipe command to call pbcopy via reattach-to-user-namespace instead
of setting the default-command to a shell launched via
reattach-to-user-namespace seems to fix the problem.

--- a/roles/developer/files/tmux/keybindings.conf
+++ b/roles/developer/files/tmux/keybindings.conf
@@ -1,4 +1,4 @@
-# Use vim keybindings in copy mode
+# Use vim keybindings in copy and choice modes
 set-window-option -g mode-keys vi
 
 # easy-to-remember split pane commands
