--- a/roles/developer/files/tmux/osx.conf
+++ b/roles/developer/files/tmux/osx.conf
@@ -2,6 +2,8 @@
 # (among others). Alternatively, copy-selection could be rebound with
 #		unbind -t vi-copy Enter
 #		bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-shell $SHELL
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
-bind-key -t vi-copy 'y' copy-pipe pbcopy
+#bind-key -t vi-copy 'y' copy-pipe pbcopy
+bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
