--- a/development.yml
+++ b/development.yml
@@ -1,7 +1,13 @@
 ---
 # file: developer.yml
 - include: base.yml
+
 - hosts: localhost
+  pre_tasks:
+    - include_vars: os_{{ ansible_os_family }}.yml
+      tags:
+        - always
+
   roles:
     - common
     - developer
