add support for Ubuntu
Separate packages into distribution specific tasks.

Add entries to bashrc to read completions from system-wide locations on
Linux.

Fix setting of SSH_AUTH_SOCK so that it queries gpgconf to get the
value.

Use ansible_system instead of ansible_os_family when determining the
system type.

--- a/roles/developer/tasks/git.yml
+++ b/roles/developer/tasks/git.yml
@@ -77,8 +77,8 @@
 - name: git config version.prereleaseSuffix -rc
   command: git config --global version.prereleaseSuffix -rc
 
-- name: git config gpg.program gpg2
-  command: git config --global gpg.program gpg2
+- name: git config gpg.program gpg
+  command: git config --global gpg.program gpg
 
 - name: create $HOME/bin directory
   file: dest="{{ ansible_env.HOME }}/bin" state=directory
