--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -63,13 +63,16 @@
   copy: dest="{{ ansible_env.HOME }}/Library/Python/2.7/lib/python/site-packages/homebrew.pth" src=homebrew.pth
   when: ansible_distribution == 'MacOSX'
 
+- name: create user font directory
+  file: dest="{{ user_font_dir }}" state=directory
+  tags:
+    - conf
+
 - name: install patched Inconsolata
-  copy: dest="{{ ansible_env.HOME }}/Library/Fonts/Inconsolata for Powerline.otf" src="fonts/Inconsolata/Inconsolata for Powerline.otf"
-  when: ansible_distribution == 'MacOSX'
+  copy: dest="{{ user_font_dir }}/Inconsolata for Powerline.otf" src="fonts/Inconsolata/Inconsolata for Powerline.otf"
 
 - name: install go fonts
-  copy: dest="{{ ansible_env.HOME }}/Library/Fonts" src="fonts/go/"
-  when: ansible_distribution == 'MacOSX'
+  copy: dest="{{ user_font_dir }}" src="fonts/go/"
 
 - include: git.yml
   tags:
