--- a/roles/developer/tasks/main.yml
+++ b/roles/developer/tasks/main.yml
@@ -56,6 +56,7 @@
 # https://docs.python.org/2/library/site.html
 - name: python site-packages directory
   file: dest="{{ ansible_env.HOME }}/Library/Python/2.7/lib/python/site-packages" state=directory
+  when: ansible_distribution == 'MacOSX'
   tags:
     - conf
 
